# ccx-api

./: .env-example  Cargo.toml
crates/ccx-api-lib/src/: client.rs
crates/ccx-binance/src/: api.rs  client.rs  lib.rs  prelude.rs  proto.rs
crates/ccx-binance/src/api/: error.rs
crates/ccx-binance/src/client/: credential.rs  public.rs  signed_ready.rs  signer.rs  stamped.rs
crates/ccx-binance/src/spot/client/: websocket.rs
crates/ccx-binance/src/spot/rate_limiter/: actor.rs  handle.rs
crates/ccx-bitgo/: Cargo.toml
crates/ccx-bitgo/examples/: general.rs  trade.rs  transfer.rs  wallet.rs  ws_order_book.rs
crates/ccx-bitgo/src/: api.rs  client.rs  config.rs  prelude.rs  types.rs
crates/ccx-bitgo/src/api/: error.rs  trade.rs  transfer.rs  wallet.rs
crates/ccx-bitgo/src/api/general/: ping.rs
crates/ccx-bitgo/src/api/trade/: current_user.rs  list_currencies.rs  (+3 more)
crates/ccx-bitgo/src/types/: rate_limits.rs
crates/ccx-gat____________/: Cargo.toml
crates/ccx-gat____________/src/client/: signer.rs
crates/ccx-gate/: Cargo.toml
crates/ccx-gate/examples/: spot_account.rs  spot_currency.rs  spot_general.rs  spot_order.rs  spot_tickers.rs  wallet.rs  withdrawal.rs
crates/ccx-gate/src/: client.rs  config.rs  lib.rs  prelude.rs  proto.rs
crates/ccx-gate/src/api/spot/: accounts.rs  currency.rs  currency_pair.rs  tickers.rs
crates/ccx-gate/src/api/spot/order/: cancel.rs  create.rs  get.rs  list.rs
crates/ccx-gate/src/api/wallet/: balances.rs  deposit_address.rs  deposit_history.rs  transfer.rs  withdrawal_history.rs
crates/ccx-gate/src/api/withdrawal/: withdraw.rs
crates/ccx-gate/src/client/: meta.rs  ready.rs  signed.rs  stamped.rs
crates/ccx-lib/: Cargo.toml
crates/ccx-lib/src/: error.rs  lib.rs  websocket.rs
crates/ccx-mexc/src/: client.rs
(+5 files in other folders)
