[package]
name = "ccx-gate"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
ccx-lib = { path = "../ccx-lib", features = ["console_formatter"] }
bon.workspace = true
derive_more.workspace = true
chrono = "0.4"
futures = "0.3"
hmac = "0.12"
http = "1"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.12", features = ["chrono_0_4"] }
sha2 = "0.10"
smart-string = "0.1"
smallvec = { version = "1.14", features = ["serde"] }
soketto = "0.8"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["time", "compat"] }
url = "2"
url-macro = "0.1"
form_urlencoded = "1.2.1"
uuid = { version = "1.10.0", features = ["v4"] }
webpki = "0.22"
webpki-roots = "0.26"
# TODO: unmaintained library
hex = "0.4.3"

[dev-dependencies]
dotenvy = "0.15"
envconfig = "0.11"
tokio = { version = "1", features = ["full"] }
similar-asserts = "1.7"
