[package]
name = "ccx-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
console_formatter = ["console"]

[dependencies]
anyhow.workspace = true
console = { version = "0.15", optional = true }
derive_more.workspace = true
rust_decimal = "1"
smart-string = "0.1"
serde_json.workspace = true
serde_urlencoded.workspace = true
reqwest.workspace = true
url.workspace = true
